Adding project link

--- a/index.html
+++ b/index.html
@@ -201,39 +201,39 @@
                     bring to every business.</p>
                 <div class="portfolio-grid">
                     <div class="portfolio-item">
-                        <img src="https://via.placeholder.com/400x300/2a2a4a/ffffff?text=Project+1"
+                        <img src="/assets/rogfit-App.png"
                             alt="Portfolio Project 1">
                         <div class="item-overlay">
-                            <h3>Project Title One</h3>
-                            <p>Webflow Development</p>
-                            <a href="#" class="view-project-btn">View Project <i class="fas fa-arrow-right"></i></a>
+                            <h3>RogaFit Website</h3>
+                            <p>Website Development</p>
+                            <a href="https://gym-app-roan-three.vercel.app" class="view-project-btn">View Project <i class="fas fa-arrow-right"></i></a>
                         </div>
                     </div>
                     <div class="portfolio-item">
-                        <img src="https://via.placeholder.com/400x300/2a2a4a/ffffff?text=Project+2"
-                            alt="Portfolio Project 2">
+                        <img src="/assets/Oliva-profile.png"
+                            alt="Oliva-profile Project 2">
                         <div class="item-overlay">
-                            <h3>Project Title Two</h3>
-                            <p>UI/UX Design</p>
-                            <a href="#" class="view-project-btn">View Project <i class="fas fa-arrow-right"></i></a>
+                            <h3>Oliva Portfolio</h3>
+                            <p>Oliva Profile Development</p>
+                            <a href="https://olivia-smith-portfolio.vercel.app/" class="view-project-btn">View Project <i class="fas fa-arrow-right"></i></a>
                         </div>
                     </div>
                     <div class="portfolio-item">
-                        <img src="https://via.placeholder.com/400x300/2a2a4a/ffffff?text=Project+3"
+                        <img src="/assets/furniture.png"
                             alt="Portfolio Project 3">
                         <div class="item-overlay">
-                            <h3>Project Title Three</h3>
-                            <p>SEO & Marketing</p>
-                            <a href="#" class="view-project-btn">View Project <i class="fas fa-arrow-right"></i></a>
+                            <h3>Furniture Store</h3>
+                            <p>websites Development</p>
+                            <a href="https://furniture-seven-sigma.vercel.app/" class="view-project-btn">View Project <i class="fas fa-arrow-right"></i></a>
                         </div>
                     </div>
                     <div class="portfolio-item">
-                        <img src="https://via.placeholder.com/400x300/2a2a4a/ffffff?text=Project+4"
+                        <img src="/assets/Samuel-profile.png"
                             alt="Portfolio Project 4">
                         <div class="item-overlay">
-                            <h3>Project Title Four</h3>
-                            <p>Figma to Webflow</p>
-                            <a href="#" class="view-project-btn">View Project <i class="fas fa-arrow-right"></i></a>
+                            <h3>Portfolio Project</h3>
+                            <p>Website</p>
+                            <a href="https://chiemelie-samuel.vercel.app/" class="view-project-btn">View Project <i class="fas fa-arrow-right"></i></a>
                         </div>
                     </div>
                 </div>
@@ -267,10 +267,10 @@
                     </div>
                 </div>
             </div>
-            <div class="view-all-work">
+           <!--  <div class="view-all-work">
                 <button class="btn btn-secondary" id="view-all-btn">View All Work <i
                         class="fas fa-arrow-right"></i></button>
-            </div>
+            </div> -->
             </div>
         </section>
 
