Adding more link

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Samuel Chiemelie - Portfolio</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/myphoto.png">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -22,11 +23,11 @@
                     <li><a href="#Project">Portfolio</a></li>
                     <li><a href="#About">About Us</a></li>
                     <li><a
-                            href="https://wa.me/?text=Hi%20there!%20I%27d%20like%20to%20discuss%20a%20project.">Contact</a>
+                            href="https://wa.me/09060391664?text=Hi%20Samuel,%20my%20name%20is%20.....%20%20">Contact</a>
                     </li>
                 </ul>
             </nav>
-            <a href="https://wa.me/?text=Hi%20there!%20I%27d%20like%20to%20discuss%20a%20project."
+            <a href="https://wa.me/09060391664?text=Hi%20Samuel,%20my%20name%20is%20.....%20%20"
                 class="btn btn-primary" target="_blank" rel="noopener">Let's Talk <i class="fas fa-arrow-right"></i></a>
             <div class="hamburger">
                 <i class="fas fa-bars"></i>
@@ -69,7 +70,7 @@
                     <p class="trusted-by">10+ Completed Projects</p>
                 </div>
                 <div class="hero-image">
-                    <img src="/assets/myphoto.png" alt="Website on Laptop">
+                    <img src="/assets/myphoto.png" alt="Website mockup"> ">
                 </div>
             </div>
         </section>
@@ -367,31 +368,33 @@
                     <h3>Quick Links</h3>
                     <ul>
                         <li><a href="#">Home</a></li>
-                        <li><a href="#">Services</a></li>
-                        <li><a href="#">Portfolio</a></li>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="#Services">Services</a></li>
+                        <li><a href="#Project">Portfolio</a></li>
+                        <li><a href="#About">About Us</a></li>
+                        <li><a
+                            href="https://wa.me/09060391664?text=Hi%20Samuel,%20my%20name%20is%20.....%20%20">Contact</a>
+                        </li>
                     </ul>
                 </div>
                 <div class="footer-links">
                     <h3>Services</h3>
                     <ul>
-                        <li><a href="#">Web Design</a></li>
+                        <li><a href="#">Business Landing Page Development</a></li>
                         <li><a href="#">Web Development</a></li>
-                        <li><a href="#">SEO</a></li>
-                        <li><a href="#">UI/UX Design</a></li>
+                        <li><a href="#">Website Redesign & Modernization</a></li>
+                        <li><a href="#">Portfolio Website Design & Development</a></li>
                         <li><a href="#">Maintenance</a></li>
                     </ul>
                 </div>
                 <div class="footer-contact">
                     <h3>Contact Us</h3>
-                    <p><i class="fas fa-map-marker-alt"></i> 123 Webflow Street, Design City</p>
-                    <p><i class="fas fa-phone"></i> +1 234 567 8900</p>
-                    <p><i class="fas fa-envelope"></i> info@re-artex.com</p>
+                    <p><i class="fas fa-map-marker-alt"></i> Awka city, Solution City</p>
+                    <p><i class="fas fa-phone"></i> +234 9060391664</p>
+                    <p><i class="fas fa-envelope"></i> princesamuel0903@gmail</p>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 Re-artex. All rights reserved.</p>
+                <p>&copy; 2024 Samuel-profile. All rights reserved.</p>
                 <p>Designed by Re-artex</p>
             </div>
         </div>
