hidding testimonials-section for now

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <p class="trusted-by">10+ Completed Projects</p>
                 </div>
                 <div class="hero-image">
-                    <img src="/assets/myphoto.png" alt="Website mockup"> ">
+                    <img src="/assets/myphoto.png" alt="Website mockup">
                 </div>
             </div>
         </section>
