section testimonials-section hidding

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <p class="trusted-by">10+ Completed Projects</p>
                 </div>
                 <div class="hero-image">
-                    <img src="/assets/myphoto.png" alt="Website mockup">
+                    <img src="/assets/myphoto.png" alt="Website mockup"> 
                 </div>
             </div>
         </section>
@@ -324,8 +324,7 @@
                 </div>
             </div>
         </section> -->
-
-        <section class="testimonials-section">
+<!-- <section class="testimonials-section">
             <div class="container">
                 <p class="section-tag">TESTIMONIALS</p>
                 <h2>Our clients says <i class="fas fa-star"></i></h2>
@@ -347,7 +346,8 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
+        <!--  -->
     </main>
 
     <footer class="footer">
