--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
             </div>
             <div class="footer-bottom">
                 <p>&copy; 2024 Samuel-profile. All rights reserved.</p>
-                <p>Designed by Re-artex</p>
+                <p>Designed by Samuel Chiemelie</p>
             </div>
         </div>
     </footer>
