--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 Samuel-profile. All rights reserved.</p>
+                <p>&copy; 2024 Samuel. All rights reserved.</p>
                 <p>Designed by Samuel Chiemelie</p>
             </div>
         </div>
